--- a/client/src/app/modules/administration/components/referentials/referential-type-document/referential-type-document.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-type-document/referential-type-document.component.html
@@ -49,9 +49,11 @@
                 [isDisabled]="!editMode"></select-attachment-type>
             </td>
           </tr>
-          <tr>
+          <tr *ngIf="selectedEntity.code">
             <td>
-
+              <single-attachment [entity]="selectedEntity" [entityType]="TYPE_DOCUMENT_ATTACHMENT_TYPE.entityType"
+                [editMode]="true" [attachmentTypeToDisplay]="attachmentTypeTemplate"
+                (onUploadedFile)="updateAttachments($event)"></single-attachment>
             </td>
           </tr>
         </table>
