--- a/client/src/app/modules/miscellaneous/components/upload-attachement-dialog/upload-attachement-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/upload-attachement-dialog/upload-attachement-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z2 form-div mat-body" style="padding : 20px"
-  *ngIf="entity && entity.id!=undefined && entity.id!=null">
+  *ngIf="entity && (instanceOfIAttachmentCode(entity) && entity.code || (!instanceOfIAttachmentCode(entity) && entity.id))">
   <multiple-upload [entity]="entity" [entityType]="entityType"
     [replaceExistingAttachementType]="replaceExistingAttachementType" [forcedAttachmentType]="forcedAttachmentType"
     [forcedFileExtension]="forcedFileExtension" (endOfUpload)="endUpload($event)"></multiple-upload>
