--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-accounting-account/autocomplete-accounting-account.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-accounting-account/autocomplete-accounting-account.component.html
@@ -6,7 +6,7 @@
     class="pointer">
     close
   </mat-icon>
-  <mat-icon color="accent" matTooltip="Afficher compte comptable" matTooltipShowDelay="1000" matSuffix
+  <mat-icon color="accent" matTooltip="Afficher le compte comptable" matTooltipShowDelay="1000" matSuffix
     (click)="clickOnPreviewIcon()" *ngIf="isDisplayPreviewShortcut" class="pointer ">
     visibility
   </mat-icon>
