--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -86,8 +86,12 @@
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class"
                 th:if="${values.eventDescription!=null} and ${values.eventDateString!=null}"
                 style="border-right: solid;border-color: rgb(0,83,159)">
-                <span th:utext="${values.eventDescription}"></span> <span th:if="${values.eventCbLink!=null}"> (payer <a
+                <span th:utext="${values.eventDescription}"></span> <span
+                    th:if="${values.eventCbLink!=null} and ${values.transfertDateTime==null}"> (payer <a
                         th:href="${values.eventCbLink}">ici</a>)</span>
+                <span th:if="${values.directDebitTransfertDateTime!=null}"> Date d'exécution du prélèvement : <span
+                        th:text="${values.directDebitTransfertDateTime"></span>
+                </span>
             </td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class"
                 th:if="${values.eventDescription!=null} and ${values.eventDateString==null}"
