modify generate invoice and billingclosure template when payment type is prelevement

--- a/src/main/resources/mails/templates/invoice-page.html
+++ b/src/main/resources/mails/templates/invoice-page.html
@@ -98,7 +98,7 @@
                     <tr>
                         <td>
                             <span th:if="${invoice.billingLabelIntercommunityVat!=null}">Numéro de TVA :<span
-                                    th:text="${invoice.billingLabelIntercommunityVat}"></span>
+                                    th:text="${invoice.billingLabelIntercommunityVat}"></span></span>
                         </td>
                     </tr>
                 </table>
