--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -87,11 +87,13 @@
                 th:if="${values.eventDescription!=null} and ${values.eventDateString!=null}"
                 style="border-right: solid;border-color: rgb(0,83,159)">
                 <span th:utext="${values.eventDescription}"></span> <span
-                    th:if="${values.eventCbLink!=null} and ${values.transfertDateTime==null}"> (payer <a
+                    th:if="${values.eventCbLink!=null} and ${values.directDebitTransfertDateString==null}"> (payer <a
                         th:href="${values.eventCbLink}">ici</a>)</span>
-                <span th:if="${values.directDebitTransfertDateTime!=null}"> Date d'exécution du prélèvement : <span
-                        th:text="${values.directDebitTransfertDateTime"></span>
-                </span>
+                <br>
+                <span th:if="${values.directDebitTransfertDateString!=null}"> Date d'exécution du prélèvement : <span
+                        th:text="${values.directDebitTransfertDateString}">
+                    </span></span>
+                </br>
             </td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class"
                 th:if="${values.eventDescription!=null} and ${values.eventDateString==null}"
