correction date format

--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -91,7 +91,7 @@
                         th:href="${values.eventCbLink}">ici</a>)</span>
                 <br>
                 <span th:if="${values.directDebitTransfertDate!=null}"> Date d'exécution du prélèvement : <span
-                        th:text="${values.directDebitTransfertDate}">
+                        th:text="${#temporals.format(values.directDebitTransfertDate, 'dd/MM/yyyy')}">
                     </span></span>
                 </br>
             </td>
