--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -48,15 +48,15 @@
           </fieldset>
         </tr>
       </table>
-      <table class="full-width" *ngIf="quotation && quotation.id">
+      <table class="full-width" *ngIf="quotation">
         <tr>
           <td>
             <chips-mail [(model)]="getCustomerOrderForIQuotation(quotation).mails" label="Mails"
-              [form]="orderingCustomerForm" propertyName="mails" [isDisabled]="true"></chips-mail>
+              [form]="orderingCustomerForm" propertyName="mails" [isDisabled]="false"></chips-mail>
           </td>
           <td>
-            <chips-phone [(model)]="getCustomerOrderForIQuotation(quotation).phones" label="Téléphones"
-              [form]="orderingCustomerForm" propertyName="phones" [isDisabled]="true"></chips-phone>
+            <chips-phone *ngIf="quotation.id" [(model)]="getCustomerOrderForIQuotation(quotation).phones"
+              label="Téléphones" [form]="orderingCustomerForm" propertyName="phones" [isDisabled]="true"></chips-phone>
           </td>
           <td style="vertical-align: middle;"><span *ngIf="quotation.responsable">Adresse :
               {{quotation.responsable.tiers.address}}
