modify accounting account, new rights for accounting role and add a is allow to 'put in account' with a toggle in referential

--- a/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
@@ -31,6 +31,10 @@
               <generic-toggle [(model)]="selectedEntity.isViewRestricted" label="Est à visibilité restreinte ?"
                 [form]="entityForm" propertyName="isViewRestricted"></generic-toggle>
             </td>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isAllowedToPutIntoAccount" label="Mise en compte possible ?"
+                [form]="entityForm" propertyName="isAllowedToPutIntoAccount"></generic-toggle>
+            </td>
           </tr>
         </table>
         <table class="full-width">
