corrections to delete useless dialog component

--- a/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
@@ -32,8 +32,9 @@
                 [form]="entityForm" propertyName="isViewRestricted"></generic-toggle>
             </td>
             <td>
-              <generic-toggle [(model)]="selectedEntity.isAllowedToPutIntoAccount" label="Mise en compte possible ?"
-                [form]="entityForm" propertyName="isAllowedToPutIntoAccount"></generic-toggle>
+              <generic-toggle [(model)]="selectedEntity.isAllowedToPutIntoAccount"
+                label="Mise en compte comptable possible ?" [form]="entityForm"
+                propertyName="isAllowedToPutIntoAccount"></generic-toggle>
             </td>
           </tr>
         </table>
