--- a/src/main/resources/mails/templates/invoice-page.html
+++ b/src/main/resources/mails/templates/invoice-page.html
@@ -294,6 +294,7 @@
     <p style="font-size: 12px;">Retard de paiement. Maj de 3 fois le taux d’intérêt légal (Application du CC - Article
         L441-6)<br />
         TVA acquittée sur les débits</p>
+    <p style="font-size: 12px;">Les règlements par chèque ne sont pas acceptés</p>
     <div class="page-break">
         <table>
             <tr>
