Evol to generate a PDF file when a quotation is created and attach this file with email to employee user or client user

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -165,6 +165,14 @@
           </tr>
           <tr>
             <td>
+              <select-attachment-type [(model)]="constant.attachmentTypeQuotation"
+                label="Type de pièce-jointe - Devis PDF" [form]="constantForm" propertyName="attachmentTypeQuotation"
+                [isMandatory]="true" [isDisabled]="!editMode" [byPassAttachmentHiddenFilter]="true">
+              </select-attachment-type>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-attachment-type [(model)]="constant.attachmentTypeCni" label="Type de pièce-jointe - CNI"
                 [form]="constantForm" propertyName="attachmentTypeCni" [isMandatory]="true" [isDisabled]="!editMode"
                 [byPassAttachmentHiddenFilter]="true">
