--- a/src/main/resources/mails/templates/waiting-quotation-validation.html
+++ b/src/main/resources/mails/templates/waiting-quotation-validation.html
@@ -225,7 +225,7 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>
                                                                     Pour donner suite à votre demande, veuillez trouver
-                                                                    ci-dessous votre devis.<br />
+                                                                    votre devis en pièce jointe.<br />
                                                                     Pour le valider ou nous faire part de vos remarques,
                                                                     répondez simplement à ce mail.<br />
                                                                     Dès réception de votre validation ou du paiement de
@@ -243,148 +243,6 @@
                                                                 <p><strong>Devis n°<span
                                                                             th:text="${quotation.id}"></span></strong>
                                                                 </p>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-
-
-
-                                                    <table width="100%" border="0" cellpadding="0" cellspacing="0"
-                                                        role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 10px;"
-                                                        th:each="asso : ${quotation.assoAffaireOrders}">
-                                                        <tr>
-                                                            <td
-                                                                style="padding-left:10px;padding-right:10px;padding-bottom:10px;width:100%;">
-                                                                <p><strong>Société <span
-                                                                            th:text="${asso.affaire.denomination}"></span><span
-                                                                            th:text="${asso.affaire.firstname}"></span>
-                                                                        <span th:text="${asso.affaire.lastname}"></span>
-                                                                        (<span
-                                                                            th:text="${asso.affaire.address}"></span>,
-                                                                        <span
-                                                                            th:text="${asso.affaire.city.label}"></span>)</strong>
-                                                                </p>
-                                                            </td>
-                                                        </tr>
-                                                        <th:block th:each="service : ${asso.services}">
-                                                            <th:block th:each="provision : ${service.provisions}">
-                                                                <tr>
-                                                                    <td colspan="4"
-                                                                        style="padding-left:10px;padding-right:10px;padding-top: 10px">
-                                                                        <strong><span
-                                                                                th:text="${provision.provisionType.label}"></span></strong>
-                                                                    </td>
-                                                                    <td></td>
-                                                                </tr>
-                                                                <th:block
-                                                                    th:each="invoiceItem : ${provision.invoiceItems}">
-                                                                    <tr>
-                                                                        <td colspan="4"
-                                                                            style="padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                            <span th:text="${invoiceItem.label}"></span>
-                                                                        </td>
-                                                                        <td
-                                                                            style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                            <span
-                                                                                th:text="${#numbers.formatDecimal(invoiceItem.preTaxPrice,1,2)}"></span>
-                                                                            €
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr
-                                                                        th:if="${invoiceItem.discountAmount!=null} and ${invoiceItem.discountAmount>0}">
-                                                                        <td colspan="4"
-                                                                            style="padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                            <span>Remise</span>
-                                                                        </td>
-                                                                        <td
-                                                                            style="text-align: right;white-space: nowrap; padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                            - <span
-                                                                                th:text="${#numbers.formatDecimal(invoiceItem.discountAmount,1,2)}"></span>
-                                                                            €</td>
-                                                                    </tr>
-                                                                </th:block>
-                                                            </th:block>
-                                                        </th:block>
-                                                    </table>
-
-                                                    <table width="100%" border="0" cellpadding="0" cellspacing="0"
-                                                        role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 10px;">
-                                                        <tr>
-                                                            <td
-                                                                style="padding-left:10px;padding-right:10px;width:100%;">
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-
-                                                    <table
-                                                        style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;   color: #233d56; width:100%;">
-                                                        <tr th:if="${preTaxPriceTotal!=null}">
-                                                            <td colspan="4"
-                                                                style="text-align: right;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong>Prix total HT</strong>
-                                                            </td>
-                                                            <td
-                                                                style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong><span
-                                                                        th:text="${#numbers.formatDecimal(preTaxPriceTotal,1,2)}"></span>
-                                                                    €</strong>
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr th:if="${discountTotal!=null}">
-                                                            <td colspan="4"
-                                                                style="text-align: right;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong>Remise totale</strong>
-                                                            </td>
-                                                            <td
-                                                                style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong>- <span
-                                                                        th:text="${#numbers.formatDecimal(discountTotal,1,2)}"></span>
-                                                                    €</strong>
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr th:if="${preTaxPriceTotalWithDicount!=null}">
-                                                            <td colspan="4"
-                                                                style="text-align: right;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong>Total HT</strong>
-                                                            </td>
-                                                            <td
-                                                                style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong><span
-                                                                        th:text="${#numbers.formatDecimal(preTaxPriceTotalWithDicount,1,2)}"></span>
-                                                                    €</strong>
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr th:if="${vats!=null}" th:each="vat : ${vats}"
-                                                            style="text-align: right;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                            <td colspan="4"><strong><span
-                                                                        th:text="${vat.label}"></span><span>
-                                                                        sur la base de </span><span
-                                                                        th:text="${#numbers.formatDecimal(vat.base,1,2)}"></span>
-                                                                    €</strong>
-                                                            </td>
-                                                            <td
-                                                                style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong><span
-                                                                        th:text="${#numbers.formatDecimal(vat.total,1,2)}"></span>
-                                                                    €</strong>
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr th:if="${priceTotal!=null}">
-                                                            <td colspan="4"
-                                                                style="text-align: right;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong>Prix TTC</strong>
-                                                            </td>
-                                                            <td
-                                                                style="text-align: right;white-space: nowrap;padding-left:10px;padding-right:10px;padding-top: 0px">
-                                                                <strong><span
-                                                                        th:text="${#numbers.formatDecimal(priceTotal,1,2)}"></span>
-                                                                    €</strong>
                                                             </td>
                                                         </tr>
                                                     </table>
