--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -701,7 +701,7 @@
           <tr>
             <td>
               <autocomplete-billing-type [(model)]="constant.billingTypeSupplyFullBeCopy"
-                label="Type de poste de facturation - Copie intégrale" [form]="constantForm"
+                label="Type de poste de facturation - Copie intégrale des BE" [form]="constantForm"
                 propertyName="billingTypeSupplyFullCopy" [isMandatory]="true" [isDisabled]="!editMode">
               </autocomplete-billing-type>
             </td>
