--- a/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
+++ b/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
@@ -242,7 +242,7 @@
         </tr>
         <tr *ngIf="displayOption(billingTypeSupplyFullBeCopy)">
           <td>
-            <generic-toggle [(model)]="provision.isSupplyFullBeCopy" label="Fourniture de copie intégrale ?"
+            <generic-toggle [(model)]="provision.isSupplyFullBeCopy" label="Fourniture de copie intégrale des BE ?"
               (onToggleChange)="provisionChangeFunction()" [form]="optionForm" propertyName="isSupplyFullBeCopy">
             </generic-toggle>
           </td>
