--- a/client/src/app/modules/invoicing/components/payment-details-dialog/payment-details-dialog.component.html
+++ b/client/src/app/modules/invoicing/components/payment-details-dialog/payment-details-dialog.component.html
@@ -8,7 +8,7 @@
         {{node.name}}
       </mat-tree-node>
       <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding
-        [ngClass]="{'selected':getNodeName(selectedPayment)==node.name,'payment-tree-active':getNodeName(selectedPayment)==node.name, 'isCanceled': selectedPayment.isCancelled===true}"
+        [ngClass]="{'selected':getNodeName(selectedPayment)==node.name,'payment-tree-active':getNodeName(selectedPayment)==node.name, 'isCancelled': selectedPayment.isCancelled===true}"
         class="pointer" (click)="selectNode(node)">
         <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
