--- a/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
@@ -16,6 +16,11 @@
           <generic-input [(model)]="invoiceSearch.maxAmount" label="Montant maximum" [form]="invoiceForm"
             propertyName="maxAmount" [isMandatory]="false" [isDisabled]="false" type="number"></generic-input>
         </td>
+        <td>
+          <autocomplete-employee [(model)]="invoiceSearch.salesEmployee" label="Commercial" [form]="invoiceForm"
+            propertyName="salesEmployee" [isMandatory]="false">
+          </autocomplete-employee>
+        </td>
         <td *ngIf=" !isForTiersIntegration">
           <generic-datepicker [(model)]="invoiceSearch.startDate" label="Date de début" [form]="invoiceForm"
             propertyName="startDate" [isMandatory]="false" [isDisabled]="false"></generic-datepicker>
