--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -2,6 +2,9 @@
   <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
     <mat-tab [label]="provision.provisionType.label">
       <div class="form-div">
+        <!--  <sort-table [columns]="displayedColumns" [values]="values" tableName="tableName"
+          [filterText]="filterText"></sort-table>
+-->
         <table class="full-width">
           <tr>
             <td>
