--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -2,8 +2,8 @@
   <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
     <mat-tab [label]="provision.provisionType.label">
       <div class="form-div">
-        <!--  <sort-table [columns]="displayedColumns" [values]="values" tableName="tableName"
-          [filterText]="filterText"></sort-table>
+        <!--<sort-table [columns]="displayedColumns" [values]="formalites" tableName="tableName"
+          [actions]="tableAction"></sort-table>
 -->
         <table class="full-width">
           <tr>
