--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -50,19 +50,19 @@
             <tr>
               <td>
                 <autocomplete-provision-type [(model)]="assoServiceProvisionType.provisionType" [form]="entityForm"
-                  [propertyName]="'provisionType'+index" [isMandatory]="true"
+                  [propertyName]="'provisionType'+index+deleteIndex" [isMandatory]="true"
                   [isDisabled]="!editMode"></autocomplete-provision-type>
               </td>
               <td>
                 <generic-textarea [(model)]="assoServiceProvisionType.apeCodes" label="Codes APE" [form]="entityForm"
-                  [propertyName]="'apeCodes'+index" [isMandatory]="false" [isDisabled]="!editMode"
+                  [propertyName]="'apeCodes'+index+deleteIndex" [isMandatory]="false" [isDisabled]="!editMode"
                   matTooltipShowDelay="1000"
                   matTooltip="Codes APE nécessaires dans l'une des activités pour appliquer la prestation (séparés par un ;)"
                   [numberOfLines]="1"></generic-textarea>
               </td>
               <td>
                 <chips-forme-juridique [(model)]="assoServiceProvisionType.formeJuridiques" label="Formes juridique"
-                  [form]="entityForm" [propertyName]="'formeJuridique'+index" [isMandatory]="false"
+                  [form]="entityForm" [propertyName]="'formeJuridique'+index+deleteIndex" [isMandatory]="false"
                   [isDisabled]="!editMode" matTooltipShowDelay="1000"
                   matTooltip="Formes juridiques nécessaires pour appliquer la prestation"></chips-forme-juridique>
               </td>
@@ -72,20 +72,21 @@
             <tr>
               <td>
                 <generic-input [(model)]="assoServiceProvisionType.minEmployee" label="Nombre minimal de salariés"
-                  [form]="entityForm" [propertyName]="'minEmployee'+index" [isMandatory]="false"
+                  [form]="entityForm" [propertyName]="'minEmployee'+index+deleteIndex" [isMandatory]="false"
                   matTooltipShowDelay="1000" [isDisabled]="!editMode"
                   matTooltip="Nombre minimal de salariés pour appliquer la prestation" type="number"></generic-input>
               </td>
               <td>
                 <generic-input [(model)]="assoServiceProvisionType.maxEmployee" label="Nombre maximal de salariés"
-                  [form]="entityForm" [propertyName]="'maxEmployee'+index" [isMandatory]="false"
+                  [form]="entityForm" [propertyName]="'maxEmployee'+index+deleteIndex" [isMandatory]="false"
                   matTooltipShowDelay="1000" [isDisabled]="!editMode"
                   matTooltip="Nombre maximal de salariés pour appliquer la prestation" type="number"></generic-input>
               </td>
               <td>
                 <generic-input [(model)]="assoServiceProvisionType.customerMessageWhenAdded"
                   label="Message à afficher en cas d'ajout" [form]="entityForm" matTooltipShowDelay="1000"
-                  [propertyName]="'customerMessageWhenAdded'+index" [isMandatory]="false" [isDisabled]="!editMode"
+                  [propertyName]="'customerMessageWhenAdded'+index+deleteIndex" [isMandatory]="false"
+                  [isDisabled]="!editMode"
                   matTooltip="Message à afficher en cas d'ajout de la prestation suite aux conditions précédentes"
                   [maxLength]="400"></generic-input>
               </td>
@@ -112,13 +113,13 @@
           <tr *ngFor="let assoServiceTypeDocument of selectedEntity.assoServiceTypeDocuments ; let index = index">
             <td>
               <autocomplete-type-document [(model)]="assoServiceTypeDocument.typeDocument" [form]="entityForm"
-                [propertyName]="'typeDocument'+index" [isMandatory]="true" [isDisabled]="!editMode"
+                [propertyName]="'typeDocument'+index+deleteIndex" [isMandatory]="true" [isDisabled]="!editMode"
                 matTooltip="Seuls les types attachés à un Type de pièce jointe sont affichés"
                 [onlyDisplayWithAttachmentType]="true"></autocomplete-type-document>
             </td>
             <td>
               <generic-toggle [(model)]="assoServiceTypeDocument.isMandatory" label="Est obligatoire ?"
-                [form]="entityForm" [propertyName]="'isMandatoryDocument'+index"
+                [form]="entityForm" [propertyName]="'isMandatoryDocument'+index+deleteIndex"
                 [isDisabled]="!editMode"></generic-toggle>
             </td>
             <td>
@@ -143,12 +144,12 @@
           <tr *ngFor="let assoServiceFieldType of selectedEntity.assoServiceTypeFieldTypes; let index = index">
             <td>
               <select-service-field-type [(model)]="assoServiceFieldType.serviceFieldType"
-                [propertyName]="'serviceFieldType'+index" [form]="entityForm" [isMandatory]="true" label="Type de champ"
-                [isDisabled]="!editMode"></select-service-field-type>
+                [propertyName]="'serviceFieldType'+index+deleteIndex" [form]="entityForm" [isMandatory]="true"
+                label="Type de champ" [isDisabled]="!editMode"></select-service-field-type>
             </td>
             <td>
               <generic-toggle [(model)]="assoServiceFieldType.isMandatory" label="Est obligatoire ?" [form]="entityForm"
-                [propertyName]="'isMandatoryField'+index" [isDisabled]="!editMode"></generic-toggle>
+                [propertyName]="'isMandatoryField'+index+deleteIndex" [isDisabled]="!editMode"></generic-toggle>
             </td>
             <td>
 
